# cegis

ADGen_v2.0/: ErdSetup.cpp  ErdSetup.h  Generator.cpp  Generator.eml  Generator.opt  Generator.plg  Generator.sln  Generator.vcproj  GeneratorBak_5_26.c  autocell.c  resource.h
ADGen_v2.0_EML/: GeneratorV2.eml
BSQReader/: BSQReader.sln  BSQReader.vcproj  bsqreader.h  bsqreader.hpp  dimexception.h  driver.cpp  fileexception.h  imageinfo.h  pixel.h  point.h  stdafx.cpp
CVSROOT/: modules
CurveShoulderFinder/: BSQReader.h  BSQReader.hpp  CubicSplineCurve.h  CubicSplineCurve.hpp  CubicSplineEvaluator.h  CubicSplineEvaluator.hpp  CubicSplineSolver.h  CubicSplineSolver.hpp  CurvePartitioner.h  CurvePartitioner.hpp  DenseMatrix.h  DenseMatrix.hpp  DiagonalMatrix.h  DiagonalMatrix.hpp  Doxyfile  FittingCurve.h  FittingCurve.hpp  GDALDataTypeTraits.h  GaussianSolver.h  GaussianSolver.hpp  ImgReader.h  ImgReader.hpp  InvertMatrix.h  InvertMatrix.hpp  LUDecomposition.h  LUDecomposition.hpp  LUDecompositionSolver.h  LUDecompositionSolver.hpp  LinearRegression.h  LinearRegression.hpp  LogisticCurve.h  LogisticCurve.hpp  LowerTriangularMatrix.h  LowerTriangularMatrix.hpp  Makefile  Makefile.am  MarquardtMethod.h  MarquardtMethod.hpp  Matrix.h  Matrix.hpp  (+25 more)
CurveShoulderFinder/Input/: LR_Elev.txt  LR_Flow.txt  LR_Slope.txt  Matrix.txt  Notes.txt  Pisc_Elev.txt  Pisc_Flow.txt  Pisc_Slope.txt  Results.txt
CurveShoulderFinder/Old/: UML.dia  driver.cpp  thoroughTests.cpp  thoroughTests.h
CurveShoulderFinder/Output/: LR_ElevOutput.txt  comparisonLR_ElevOutput.xls  comparisonSyntheticOutput.xls  cubicsplineLR_ElevOutput.csv  cubicsplineSyntheticOutput.csv  logisticLR_ElevOutput.csv  logisticLR_ElevOutput.txt  logisticLR_ElevOutput.xls  logisticSyntheticOutput.csv  logisticSyntheticOutput.txt  logisticSyntheticOutput.xls  syntheticDataOutput.txt
CurveShoulderFinder/doc/: doxygenMain.h  installation.h
CurveShoulderFinder/drivers/: ComparePrecipitation.cpp  LittleRiver.cpp  Makefile.am
CurveShoulderFinder/tests/: 1920newstack.bsq  1920newstack.hdr  1920newstack.img  BSQReader_t.cpp  DiagonalMatrix_t.cpp  ImgReader_t.cpp  InvertMatrix_t.cpp  LUDecompositionSolver_t.cpp  LUDecomposition_t.cpp  Makefile.am  MarquardtMethod_t.cpp  NonlinearRegression_t.cpp  PolynomialCurve_t.cpp  PolynomialRegression_t.cpp  testsUtility.h  testsUtility.hpp
DSS/: .nbattrs  DSSApplet.html  DSSApplet.java  DSSApplet.java~  DSSAppletOld.html  DSSAppletwbutton.html  DSSAppletwbuttonNew.html  DSSContinent.html  DSSContinent.java  DSSContinent.java~  DSSMain.java~  DSSRegional.form  DSSRegional.html  DSSRegional.java  DSSRegional.java~  DSSUpRead.java  DSSUpWrite.java  DSSUpdater.java  DSSwTutorial.html  DSSwTutorialApplet.html  DSSwTutorialContinent.html  DSSwTutorialRegional.html  Graph.java  GraphContext.java  GraphPallet.java  LinkText.java  Popuptext.java  RoundGradientPaint.java  TextNode.java  Tutorial.html  Tutorial.java  Writer.html  host.html  textnode.html  txtnodemain.java
DSSv1/: NextTest$1.class.bak  NextTest$2.class.bak  NextTest.class.bak  dss_map.html  regional.html  regional.java
DiffIMG/: bob.img  bob.img.info  compare.h  frmdifference.cpp  frmdifference.h  frmdifference.ui  frmdifference.ui.h  frmdimensions.cpp  frmdimensions.h  frmdimensions.ui  frmdimensions.ui.h  frmloadimages.cpp  frmloadimages.h  frmloadimages.ui  frmloadimages.ui.h  imagefile.h  main.cpp  moc_frmdifference.cpp  moc_frmdimensions.cpp  moc_frmloadimages.cpp
FileConverter/: FileConverter.aps  FileConverter.clw  FileConverter.cpp  FileConverter.dsp  FileConverter.dsw  FileConverter.h  FileConverter.ncb  FileConverter.opt  FileConverter.plg  FileConverter.rc  FileConverterDlg.cpp  FileConverterDlg.h  FileParser.cpp  FileParser.h  OffsetDialog.cpp  OffsetDialog.h  StdAfx.h  resource.h
GCTP_CPP/: GCTP_CPP.vcproj  Mollweide.cpp  alaskaconformal.cpp  conic.h  (+77 more)
IntersectionLocator/: Circle.cpp  Circle.h  Classifier.cpp  Classifier.h  ControlPoint.h  Copy of IntersectionMap.h  DelauneyTriangulator.cpp  DelauneyTriangulator.h  DistanceFilter.cpp  DistanceFilter.h  Error.h  Filter.h  InMemRaster.cpp  InMemRaster.h  IntersectionLocator.cpp  IntersectionLocator.dsp  IntersectionLocator.dsw  IntersectionLocator.ncb  IntersectionLocator.opt  IntersectionLocator.plg  IntersectionMap.cpp  IntersectionMap.h  KnuthTriangulator.cpp  KnuthTriangulator.h  MakeTree.bat  MakeTree.sh  MakeTree_10-90.bat  Makefile.am  Point.h  QuarticTriangulator.cpp  QuarticTriangulator.h  RecursiveTriangulator.cpp  RecursiveTriangulator.h  RubberSheetTransform.h  SaalfeldRubberSheet.cpp  SaalfeldRubberSheet.h  Template.cpp  Template.h  Triangle.h  VMFilter.cpp  (+3 more)
IntersectionLocator/TrainClassifier/: Makefile.am  TrainClassifier.dsp  TrainClassifier.dsw  TrainClassifier.ncb  TrainClassifier.opt  TrainClassifier.plg  main.cpp
IntersectionLocator/TrainClassifier/SpreadsheetExample/: RoadHistAll.xls  ToUseSheet.txt
IntersectionLocator/doc/: README.txt  doxyfile
IntersectionLocator/doc/doxygenFiles/: buildingOnLinux.txt  doxygenMain.h  installation.txt  overallProcess.txt  preparingForNewData.txt  printingInstructions.txt  relatedLinks.txt
IntersectionLocator/gdalsplit/: Makefile.am  configure.ac  gdalsplit.cpp
mosixFastProjections/new/: .FromMultiGeoProjector.cpp.swp  COPYING  ClientSocket.cpp  ClientSocket.h  FromMultiGeoProjector.cpp  FromMultiGeoProjector.h  GeneralProjector.cpp  GeneralProjector.h  Globals.h  Macros.h  Makefile  Makefile.am  Makefile.auto  Makefile.in  Math.h  Math.hpp  MessageDescription.h  PixelGrey.h  PixelInterface.h  PixelRGB.h  ProjImageData.cpp  ProjImageData.h  ProjImageDataInterface.h  ProjImageDataOutInterface.h  ProjImageFactory.cpp  ProjImageFactory.h  ProjImageIn.cpp  ProjImageIn.h  ProjImageInInterface.h  ProjImageInList.cpp  ProjImageInList.h  ProjImageOut.cpp  ProjImageOut.h  ProjImageOutInterface.h  ProjImageOutPiece.cpp  ProjImageOutPiece.h  ProjImageParams.cpp  ProjImageParams.h  ProjImageScale.h  ProjectorFactory.cpp  (+15 more)
mosixFastProjections/new/txt/: 13588.txt  13651.txt  input.txt  left.txt  output.txt  right.txt
(+2257 files in other folders)
