## Process this file with automake to produce Makefile.in
#
# @file Makefile.am
# @author Austin Hartman
#
# $Id: Makefile.am,v 1.2 2005/07/07 19:10:16 ahartman Exp $
#

SUBDIRS = tests

noinst_PROGRAMS = CurveShoulderFinder
CurveShoulderFinder_SOURCES = driver.cpp

EXTRA_DIST = README \
             Doxyfile
