## Process this file with automake to produce Makefile.in
#
# @file Makefile.am
# @author Austin Hartman
#
# $Id: Makefile.am,v 1.2 2005/09/28 23:03:15 ahartman Exp $
#

noinst_PROGRAMS = LittleRiver

LittleRiver_SOURCES = LittleRiver.cpp
LittleRiver_CPPFLAGS = $(GDAL_CFLAGS) -I..
LittleRiver_LDADD = $(GDAL_LIBS)

