## Process this file with automake to produce Makefile.in
#
# @file Makefile.am
# @author Austin Hartman
#
# $Id: Makefile.am,v 1.7 2005/07/01 23:10:00 ahartman Exp $
#

INCLUDES = -I..

TESTS = DiagonalMatrix_t InvertMatrix_t LUDecomposition_t \
        LUDecompositionSolver_t MarquardtMethod_t NonlinearRegression_t \
        PolynomialRegression_t PolynomialCurve_t

noinst_PROGRAMS = $(TESTS)

DiagonalMatrix_t_SOURCES = DiagonalMatrix_t.cpp
InvertMatrix_t_SOURCES = InvertMatrix_t.cpp
LUDecomposition_t_SOURCES = LUDecomposition_t.cpp
LUDecompositionSolver_t_SOURCES = LUDecompositionSolver_t.cpp
MarquardtMethod_t_SOURCES = MarquardtMethod_t.cpp
NonlinearRegression_t_SOURCES = NonlinearRegression_t.cpp
PolynomialRegression_t_SOURCES = PolynomialRegression_t.cpp
PolynomialCurve_t_SOURCES = PolynomialCurve_t.cpp

