## Process this file with automake to produce Makefile.in
#
# @file Makefile.am
# @author Austin Hartman
#
# $Id: Makefile.am,v 1.1 2005/12/02 19:28:46 ahartman Exp $
#

noinst_PROGRAMS = gdalsplit
gdalsplit_SOURCES = gdalsplit.cpp
gdalsplit_CPPFLAGS = $(GDAL_CFLAGS)
gdalsplit_LDADD = $(GDAL_LIBS)

