dnl @file configure.ac
dnl @author Austin Hartman
dnl $Id: configure.ac,v 1.1 2005/07/27 17:16:37 mschisler Exp $

AC_INIT(MOSIXFastReprojections, 0.1, mschisler@usgs.gov)
AC_PREREQ(2.54)
AM_INIT_AUTOMAKE

AC_PROG_CXX

# can add subdirectories seperate Makefiles by spaces.
AC_CONFIG_FILES([Makefile ])
AC_OUTPUT

